# robot

./: .gitignore
code/cpp/: CMakeLists.txt
code/cpp/src/: CMakeLists.txt  hello_world.cpp  opencv.cpp  opencv.h  simpletest_raspicam.cpp  simpletest_raspicam_cv.cpp  utils.h
code/cpp/src/examples/: CMakeLists.txt  filter_2d.cpp  hsv_conversion.cpp  opencv_camera.cpp  tracking.cpp  watershed.cpp
code/cpp/src/socket/: CMakeLists.txt
code/cpp/src/stream/: CMakeLists.txt  camera_reciever.cpp  camera_stream.cpp
